I added body and wild-card selectors to the style element

--- a/My-To-Do-List.html
+++ b/My-To-Do-List.html
@@ -1,5 +1,16 @@
 <html>
 <head>
+<style>
+body {
+margin: 0;
+min-width: 250px;
+}
+
+/* Include the padding and border in an element's total width and height */
+* {
+box-sizing: border-box;
+}
+</style>
 </head>
 
 <body>
