--- a/My-To-Do-List.html
+++ b/My-To-Do-List.html
@@ -10,6 +10,25 @@ min-width: 250px;
 * {
 box-sizing: border-box;
 }
+
+/* Remove margins and padding from the list*/
+ul {
+
+	margin: 0;
+	padding: 0;
+}
+
+/* Style the list items*/
+ul li {
+	cursor: pointer;
+	position: relative;
+	padding: 12px 8px 12px 40px;
+	background: #eee;
+	font-size: 18px;
+	transition: 0.2s;
+}
+
+
 </style>
 </head>
 
